implement code suggestions